--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -14,18 +14,10 @@
 <nav class="sidebar">
     <ul>
         <li class="sidebar-first">
-            <b>식당 관리</b>
-            <ul>
-                <li><a href="/admin/restaurants">식당 목록</a></li>
-                <li><a href="/admin/addRestaurant">식당 추가</a></li>
-                <li><a href="/admin/editRestaurant">식당 수정</a></li>
-            </ul>
+            <b><a href="/admin/restaurants">식당 관리</a></b>
         </li>
         <li class="sidebar-first">
-            <b>회원 관리</b>
-            <ul>
-                <li><a href="">회원 삭제</a></li>
-            </ul>
+            <b><a href="">회원 관리</a></b>
         </li>
     </ul>
 </nav>
