--- a/static/css/sugList.css
+++ b/static/css/sugList.css
@@ -49,3 +49,17 @@ td:not(td:nth-child(2)) {
 .btn-nav {
     width: 10%;
 }
+
+#cmm-logo {
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.cmm-title {
+    display: flex;
+    justify-content: center;
+    font-weight: bolder;
+    margin: 30px;
+}
