--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -127,9 +127,9 @@
     <!-- 로그인 팝업창 -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
-            <h2>로그인</h2>
+            <h2 class="modal-title">로 그 인</h2>
             <div>
-                <img src="/static/images/CMM.png" width="150px" height="200px" />
+                <img src="/static/images/CMM-circle.png" width="150px" height="200px" />
             </div>
             <a href=""><span class="signupLabel" id="closeModalBtn">닫기</span></a>
 
@@ -168,19 +168,41 @@
                 </div>
 
                 <div class="searchUser">
-                    <a href="/views/user/searchId.ejs" target="_blank">아이디 찾기</a>
-                    <a href="">비밀번호 찾기</a>
+                    <a href="/user/searchId" target="_blank" onclick="openSearch()">아이디 찾기</a>
+                    <a href="/user/searchPw" target="_blank" onclick="openSearch()">비밀번호 찾기</a>
                 </div>
             </form>
         </div>
     </div>
 
+    <!-- 찾기 onclick -->
+    <script>
+    function openSearch() {
+
+    event.preventDefault();
+
+    var width = 600;
+    var height = 500; 
+
+    // 새 창 열기
+    var newWindow = window.open(event.target.href, "_blank", "width=" + width + ",height=" + height);
+
+    // 새 창의 크기 조절
+    newWindow.resizeTo(width, height);
+
+    // 새 창을 화면 중앙으로 이동
+    var left = (window.screen.width - width) / 2;
+    var top = (window.screen.height - height) / 2;
+    newWindow.moveTo(left, top);
+    }
+    </script>
+
     <!-- 회원가입 팝업창 -->
     <div id="signupModal" class="modal">
         <div class="modal-content">
-            <h2>회원가입</h2>
-            <div>
-                <img src="/static/images/CMM.png" width="150px" height="200px" />
+            <h2 class="modal-title">회 원 가 입</h2>
+            <div class="imgLogo">
+                <img src="/static/images/CMM-circle.png" width="150px" height="200px" />
             </div>
 
             <a href=""><span class="signupLabel" id="closeLikeBtn">닫기</span></a>
@@ -356,9 +378,10 @@
             window.open(
                 "/user/idCheckForm",
                 "chkForm",
-                "width=500, height=300, , top=300, left=500 + leftresizable=no, scrollbars=no"
+                "width=500, height=350, , top=300, left=500 + leftresizable=no, scrollbars=no"
             );
         }
+
         // 중복체크 후 다시 새로운 아이디를 입력했을 때 다시 중복체크 하도록 함
         function inputIdCk() {
             document.modal_register.idDuplication.value = "idUncheck";
@@ -401,18 +424,18 @@
                         emailInput.setAttribute("readonly", true);
                         alert("메일 전송에 성공하였습니다.");
                     } 
-                    if (response.data.emailCk) {
+                    if (response.data.check) {
                         alert("중복된 이메일 입니다.");
                         email.value = "";
                     }
-                    else {
+                    if(response.data.ok === false) {
                         alert("메일 전송에 실패하였습니다.");
                     }
                     
                 })
 
-                .catch((error) => {
-                    console.error(error);
+                .catch((err) => {
+                    console.error(err);
                     alert("서버 오류가 발생했습니다.");
                 });
         }
@@ -420,7 +443,15 @@
 
     <!-- 이메일 코드 확인 -->
     <script>
+        // btnEmailCk 함수 실행 여부를 추적하는 변수
+        let isBtnEmailCkRunning = false;
+    
         function btnEmailCk(callback) {
+            // 이미 실행 중인 경우 중복 호출 방지
+            if (isBtnEmailCkRunning) {
+                return;
+            }
+    
             const emailChk = document.getElementById("emailChk");
             const codeValue = emailChk.value;
     
@@ -452,7 +483,14 @@
                 if (callback) {
                     callback(false);
                 }
+            })
+            .finally(() => {
+                // 실행이 끝났으므로 실행 중인 상태를 해제함
+                isBtnEmailCkRunning = false;
             });
+    
+            // 실행 중으로 표시
+            isBtnEmailCkRunning = true;
         }
     
         document.getElementById("modal_register").addEventListener("submit", function (event) {
@@ -503,6 +541,10 @@
             });
         });
     </script>
+    
+
+    <!-- 아이디 찾기 -->
+
 
     <!-- 어두운 오버레이 -->
     <div id="overlay"></div>
