--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -47,13 +47,10 @@
                     </ul>
                 </nav>
             </div>
-                
-            <script>
-               
-            </script>
 
-            
-                <!-- <nav class="nav">
+            <script></script>
+
+            <!-- <nav class="nav">
                     <a href="/" class="nav-item is-active" active-color="red">홈</a>
                     <a href="/search/category?category=한식" class="nav-item" active-color="orange">한식</a>
                     <a href="/search/category?category=일식" class="nav-item" active-color="yellow">일식</a>
@@ -98,40 +95,41 @@
             });
         });
             </script> -->
-          
         </div>
 
         <div class="InfoResponse">
             <div class="buttons">
                 <!-- 로그인 유무에 따른 헤더 변경 -->
                 <%if (isLogin) { %>
-            
+
                 <div class="welcomeResponse" style="right: 25%">
                     <p><%= user %>님 환영합니다.</p>
                 </div>
-                
+
                 <form name="form_logout" action="/form/logout" method="post">
                     <button id="logoutBtn" class="signBtn" type="submit">로그아웃</button>
-                   
-                        <button
-                            type="button"
-                            class="signBtn"
-                            id="menu"
-                            onclick="window.location.href = '/mypage/likeList';"
+
+                    <button
+                        type="button"
+                        class="signBtn"
+                        id="menu"
+                        onclick="window.location.href = '/mypage/likeList';"
+                    >
+                        마이페이지
+                    </button>
+                    <button class="signBtn">
+                        <a href="/suggestion/list" style="text-decoration: none; color: black"
+                            >건의사항</a
                         >
-                            마이페이지
-                        </button>
-                        <button class="signBtn">
-                            <a href="/suggestion/list" style="text-decoration: none; color: black"
-                                >건의사항</a
-                            >
-              
+                    </button>
                 </form>
                 <% } else { %>
                 <button id="signupBtn" class="signBtn">회원가입</button>
                 <button id="loginBtn" class="signBtn">로그인</button>
                 <button class="signBtn">
-                    <a href="/suggestion/list" style="text-decoration: none; color: black" >건의사항</a>
+                    <a href="/suggestion/list" style="text-decoration: none; color: black"
+                        >건의사항</a
+                    >
                 </button>
                 <% } %>
                 <br />
@@ -375,19 +373,19 @@
 
     <script>
         function validateEmail(email) {
-        // 간단한 이메일 형식 유효성 검사
-        const re = /\S+@\S+\.\S+/;
-        return re.test(email);
-    }
+            // 간단한 이메일 형식 유효성 검사
+            const re = /\S+@\S+\.\S+/;
+            return re.test(email);
+        }
 
         function emailCode() {
             const emailInput = document.getElementById("email");
             const emailValue = emailInput.value;
 
             if (!validateEmail(emailValue)) {
-            alert("올바른 이메일 형식이 아닙니다.");
-            return;
-        }
+                alert("올바른 이메일 형식이 아닙니다.");
+                return;
+            }
 
             axios({
                 method: "POST",
