Feat: 식당 관리 페이지 CSS 분리

--- a/views/admin/adminAddRest.ejs
+++ b/views/admin/adminAddRest.ejs
@@ -4,33 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <%-include('../include/head.ejs')%>
-        <link rel="stylesheet" href="/static/css/adminRest.css" />
+        <link rel="stylesheet" href="/static/css/adminAddRest.css" />
         <title>관리 페이지</title>
-        <style>
-            fieldset {
-                margin: 20px 0px;
-                padding: 10px;
-            }
-            fieldset label {
-                width: 100px;
-                vertical-align: top;
-            }
-            #btnAdd,
-            #btnRmv {
-                width: 30px;
-            }
-            .btn-hidden {
-                display: none;
-            }
-            .restInfo input {
-                width: 600px;
-                height: 36px;
-                margin-bottom: 5px;
-            }
-            .restInfo textarea {
-                width: 600px;
-            }
-        </style>
     </head>
     <body>
         <%- include('./sidebar.ejs') %>
