--- a/views/admin/adminEditRest.ejs
+++ b/views/admin/adminEditRest.ejs
@@ -4,126 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <%-include('../include/head.ejs')%>
+        <link rel="stylesheet" href="/static/css/adminEditRest.css">
         <title>관리 페이지</title>
-        <style>
-            * {
-                box-sizing: border-box;
-            }
-            body {
-                width: 100%;
-                margin: 0px;
-                padding: 0px;
-            }
-            header {
-                height: 80px;
-            }
-            .admin-main {
-                position: relative;
-                width: 85%;
-                float: right;
-            }
-            h2{
-                margin: 20px 0px;
-            }
-            #info-div, #category-div, #menu-div{
-                width: 60%;
-                border-radius: 25px;
-                padding: 20px;
-                margin: 5px;
-                border: 3px solid #edededb2;
-                margin-bottom: 10px;
-                box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
-            }
-            .title-div{
-                width: 100%;
-                margin: 5px;
-                display: flex;
-                justify-content: space-between;
-            }
-            .enable-edit-btn, .edit-do-btn{
-                width: 100px;
-                height: 42px;
-                line-height: 42px;
-                border-radius: 30px;
-                border:none;
-                box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-                font-size: 20px;
-                font-weight: 700;
-            }
-            .enable-edit-btn{
-                color: #f2f2f2;
-                background-color: #ffc064;
-            }
-            .enable-edit-btn:hover{
-                cursor: pointer;
-                background-color: #e1a000;
-            }
-            .hidden{
-                display: none;
-            }
-            .edit-do-btn{
-                color: #f2f2f2;
-                background-color: #9ed26b;
-            }
-            .edit-do-btn:hover{
-                cursor: pointer;
-                background-color: #8cbf4f ;
-            }
-            label{
-                width: 100px;
-                vertical-align: top;
-            }
-            .edit-restinfo input {
-                width: 600px;
-                height: 36px;
-                margin-bottom: 5px;
-            }
-            .edit-category select{
-                width: 100px;
-                height: 36px;
-                border-radius: 5px;
-                margin-bottom: 5px;
-            }
-            .edit-menus input{
-                width: 150px;
-                height: 36px;
-            }
-            .edit-restinfo-form input,
-            .edit textarea {
-                width: 600px;
-            }
-            .edit-category select{
-                width: 200px;
-            }
-            #btn-add, #btn-rmv{
-                width: 34px;
-                height: 34px;
-                border-radius: 5px;
-                border:none;
-                background-color: #eeeeee;
-                box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-            }
-            #btn-add:hover, #btn-rmv:hover{
-                cursor:pointer;
-                background-color: #d6d6d6fa;;
-            }
-            .form-title{
-                font-size: 26px;
-                font-weight: 700;
-            }
-            input, textarea {
-                background-color: #ffffff;
-                color: #000000;
-                padding: 10px;
-                border-radius: 5px;
-                box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-                margin-bottom: 10px;
-            }
-            input:disabled, textarea:disabled, select:disabled{
-                background-color: #f3f2f2;
-                border: 1px solid #cbcbcb;
-            }
-        </style>
     </head>
     <body>
         <%- include('./sidebar.ejs') %>
