--- a/views/admin/adminAddRestMenu.ejs
+++ b/views/admin/adminAddRestMenu.ejs
@@ -4,18 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <%-include('../include/head.ejs')%>
-        <link rel="stylesheet" href="/static/css/adminRest.css" />
+        <link rel="stylesheet" href="/static/css/adminRestList.css" />
         <title>관리 페이지</title>
-        <style>
-            label {
-                width: 100px;
-                vertical-align: top;
-            }
-            .btn-add {
-                width: 80px;
-                height: 37px;
-            }
-        </style>
     </head>
     <body>
         <%- include('./sidebar.ejs') %>
