--- a/views/admin/adminRestList.ejs
+++ b/views/admin/adminRestList.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <%-include('../include/head.ejs')%>
-        <link rel="stylesheet" href="/static/css/adminRest.css">
+        <link rel="stylesheet" href="/static/css/adminRestList.css">
         <title>관리 페이지</title>
     </head>
     <body>
