--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -17,7 +17,7 @@
             <b><a href="/admin/restaurants">식당 관리</a></b>
         </li>
         <li class="sidebar-first">
-            <b><a href="">회원 관리</a></b>
+            <b><a href="/admin/users">회원 관리</a></b>
         </li>
     </ul>
 </nav>
